--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
